Fixing alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,11 +27,6 @@ a:active {
   text-decoration: none;
 }
 
-p {
-  text-align: justify;
-  text-justify: inter-word;
-}
-
 section {
   padding: 40px 0;
 }
